--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,3 +1,4 @@
+<style>
 /********** Base styles **********/
 * {
   box-sizing: border-box;
@@ -153,3 +154,4 @@ p {
     width: 100%;
   }
 }
+</style>
