--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -11,7 +11,7 @@ h1 {
 p {
   border: 1px solid black;
   background-color: #A52A2A;
-  width: 50px;
+  width: 90%;
   height: 150px;
   margin-right: auto;
   margin-left: auto;
